Fix for overflowing names in submission list and single submission

--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -10,7 +10,6 @@ body {
 h1,
 h2 {
   color: $rg-red;
-  line-height: 1;
   margin: 0;
 }
 
